# tcg-api-trabalho-persistencia-com-mongoDB

./: .env  README.md  main.py  pyproject.toml  script.py  teste_api.py
scripts/: test_mongo.py
src/core/: database.py
src/models/: card.py  collection.py  deck.py  user.py
src/models/enums/: enums.py
src/routes/: cards.py  collections.py  decks.py  users.py
