[project]
name = "trabalho-3-persistencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.6",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "odmantic>=1.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]



